# quote_bot

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/quote_bot/: bot.py  healthcheck.py
tests/: test_bot.py  test_healthcheck.py
